fixed search bar to align uni select dropdown to the right

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -263,21 +263,26 @@ margin-bottom: 20px;
   background-color: white;
   border: none;
   border-radius: 40px;
+  display: flex;
   align-items: center;
+  margin:10% 20%;
+  padding: 10px;
 }
 
 .unit-name-search {
   color: var(--text-primary);
-  font-size: 200%;
+  font-size: 150%;
   border: none;
   outline: none;
-  margin: 10px 40px;
+  background-color: transparent;
+  margin-left: 30px;
+  flex: 1;
 }
 
 .uni-search {
   color: var(--primary-color);
-  font-size: 150%;
   border: none;
   outline: none;
-  margin: 10px 40px;
+  width:fit-content;
+  margin-right: 30px;
 }
